fix layout bug

--- a/abw.Web/Content/styles/custom/global.less
+++ b/abw.Web/Content/styles/custom/global.less
@@ -71,7 +71,7 @@ input[type=text] {
 		border-bottom-width: 1px !important;
 	}
 
-	tbody tr {
+	tbody tr:not(#noRecordsFound) {
 		display: none;
 
 		td:first-child {
